Adds connection to Supabase
- Installs supabase and uses keys to show content
- Creates hooks to handle different states of loading content
- Creates components to visualize content

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,16 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "baseUrl": "./",
+    "paths": {
+      "@Types":[
+        "lib/types/types"
+      ],
+      "@Store":[
+        "lib/supabase/StoreHandler"
+      ]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
