Refactors general redirecting
- Creates Wrapper for easy redirect if user is either logged or not

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,11 @@
       ],
       "@Components/*":[
         "components/EndpointsVisualizer/*",
-        "components/JButton/*"
+        "components/JButton/*",
+        "components/JInput/*"
+      ],
+      "@Hooks/*":[
+        "lib/hooks/*"
       ]
     }
   },
