Adds (stub) endpoint visualizer
- Modifies edit button to redirect to edit page, based on endpoint type
- Creates function to load all the values for specific endpoint and id
- Shows the values recieved (stub, only displays stringified JSON)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,9 @@
       "@Store":[
         "lib/supabase/StoreHandler"
       ],
+      "@Redirecter":[
+        "lib/routes/Redirecter"
+      ],
       "@Components/*":[
         "components/EndpointsVisualizer/*",
         "components/JButton/*",
