Refactors editing method
- Creates Editor wrapper to leverage logic of Endpoint editing
- Rewrites @Redirecter path to also use Editor
- Adds Home button to navbar

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,8 +24,8 @@
       "@Store":[
         "lib/supabase/StoreHandler"
       ],
-      "@Redirecter":[
-        "lib/routes/Redirecter"
+      "@Routing/*":[
+        "lib/routes/*"
       ],
       "@Components/*":[
         "components/EndpointsVisualizer/*",
