Refactors logic of endpoints visualizer
Modifias basically empty Homepage, moving component logic to it
Rewrites styles import to avoid double import
(Still can't believe I couldn't find a solution for that until now)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,9 +28,8 @@
         "lib/routes/*"
       ],
       "@Components/*":[
-        "components/EndpointsVisualizer/*",
-        "components/JButton/*",
-        "components/JInput/*"
+        "components/EndpointsHandler/*",
+        "components/JButton/*"
       ],
       "@Hooks/*":[
         "lib/hooks/*"
